--- a/scripts/01_data_cleaning.Rmd
+++ b/scripts/01_data_cleaning.Rmd
@@ -20,7 +20,7 @@ library(vegan)
 ### Raw Data
 Abundance and size of Giant Kelp (Macrocystis Pyrifera), ongoing since 2000. 
 ```{r}
-kelp <- read.csv(here::here("data","Annual_Kelp_All_Years_20181127.csv")) %>%
+kelp <- read.csv(here::here("data","raw","Annual_Kelp_All_Years_20181127.csv")) %>%
   clean_names() %>%
   remove_empty("rows") %>%
   na_if(-99999)
@@ -30,7 +30,7 @@ colnames(kelp); dim(kelp)
 
 Abundance and size of fish at kelp forest monitoring sites, ongoing since 2000. 
 ```{r}
-fish <- read.csv(here::here("data","Annual_fish_comb_20181127.csv")) %>%
+fish <- read.csv(here::here("data","raw","Annual_fish_comb_20181127.csv")) %>%
   clean_names() %>%
   remove_empty("rows") %>%
   na_if(-99999)
@@ -41,7 +41,7 @@ colnames(fish); dim(fish)
 
 Abundance of algae and invertebrates at kelp forest monitoring sites, ongoing since 2000. 
 ```{r}
-invert <- read.csv(here::here("data","Annual_Quad_Swath_All_Years_20181127.csv")) %>%
+invert <- read.csv(here::here("data","raw","Annual_Quad_Swath_All_Years_20181127.csv")) %>%
   clean_names() %>%
   remove_empty("rows") %>%
   na_if(-99999)
@@ -74,6 +74,7 @@ I'm going to grab the data for the mainland sites, for 2001 onward.
 ```{r}
 kelp_thin <- dplyr::select(kelp, year, month, date,site,transect,obs_code, quad,side,survey,sp_code,scientific_name,group,fronds,hld_diam,area) %>%
   filter(year >= 2001)
+head(kelp_thin)
 ```
 <br>
 
@@ -93,18 +94,31 @@ kelp_size <- kelp_thin %>%
   summarise(mean_size=mean(hld_diam,na.rm=TRUE))
 
 kelp_means <- full_join(kelp_abund,kelp_size,by=c("year", "month", "site","transect","obs_code","sp_code","scientific_name","group"))
+
+head(kelp_means)
 ```
 <br>
 
 Write out the new data
 ```{r}
-
+write.csv(kelp_means,here::here("data","Annual_Kelp_MeanSize_MeanAbund_2001-2018.csv"),row.names=FALSE)
 ```
 <br>
 
 
 #### Fish Data
-These data describe the abundance and size of fish species as part of SBCLTER's kelp forest monitoring program to track long-term patterns in species abundance and diversity. The abundance and size of all taxa of resident kelp forest fish encountered along permanent transects are recorded at nine reef sites located along the mainland coast of the Santa Barbara Channel and at two sites on the north side of Santa Cruz Island. These sites reflect several oceanographic regimes in the channel and vary in distance from sources of terrestrial runoff. In these surveys, fish were counted in either a 40x2m benthic quadrat, or in the water parcel 0-2m off the bottom over the same area. The two tables in this data package include: 1) The annual benthic fish community survey which was conducted on 11 reefs once a year around late July or early August; and 2) The monthly fish survey which was conducted once a month at a subset of the sites (3 of the annual sites) The time period of data collection for the annual benthic fish community survey varied among the 11 kelp forest sites. Sampling at BULL, CARP, and NAPL began in 2000, sampling at the other 6 mainland sites (AHND, AQUE, IVEE, GOLB, ABUR, MOHK) began in 2001 (transects 3, 5, 6, 7, 8 at IVEE were added in 2011). 
+*LTER site Abstract:* These data describe the abundance and size of fish species as part of SBCLTER's kelp forest monitoring program to track long-term patterns in species abundance and diversity. The abundance and size of all taxa of resident kelp forest fish encountered along permanent transects are recorded at nine reef sites located along the mainland coast of the Santa Barbara Channel and at two sites on the north side of Santa Cruz Island. These sites reflect several oceanographic regimes in the channel and vary in distance from sources of terrestrial runoff. In these surveys, fish were counted in a 40x2m benthic quadrat, or in the water parcel 0-2m off the bottom over the same area. The two tables in this data package include: 1) The annual benthic fish community survey which was conducted on 11 reefs once a year around late July or early August. The time period of data collection for the annual benthic fish community survey varied among the 11 kelp forest sites. Sampling at BULL, CARP, and NAPL began in 2000, sampling at the other 6 mainland sites (AHND, AQUE, IVEE, GOLB, ABUR, MOHK) began in 2001 (transects 3, 5, 6, 7, 8 at IVEE were added in 2011). 
+
+
+I'm going to grab the data for the mainland sites, for 2001 onward. 
+```{r}
+kelp_thin <- dplyr::select(kelp, year, month, date,site,transect,obs_code, quad,side,survey,sp_code,scientific_name,group,fronds,hld_diam,area) %>%
+  filter(year >= 2001) %>%
+  filter()
+head(kelp_thin)
+```
+<br>
+
 
 I am going to summarize this data set using (1) species richness, (2) species abundance, and (3) size structure. 
 ```{r}
