--- a/scripts/01_data_cleaning.Rmd
+++ b/scripts/01_data_cleaning.Rmd
@@ -83,9 +83,9 @@ head(kelp_thin)
 Now I have to summarise the size / abundance of kelp at each site. The data was collected in quadrats along permanent transects, so each transect is a replicate. A transect has 2 sections ("quad"), 0-20m and 20-40m, and 2 sides ("side"), inshore and offshore. For abundance, I want to first calculate the mean and maximum fronds / m of the transect. For size, I want to calculate the mean  and maximum holdfast diameter per transect.
 ```{r}
 kelp_abund <- kelp_thin %>%
-  #calculate fronds / m
+  #calculate fronds / m^2
   group_by(year, month, site,transect,obs_code,sp_code,scientific_name,group,quad,side) %>%
-  summarise(abund=median(fronds,na.rm=TRUE)/unique(area)) %>%
+  summarise(abund=sum(fronds,na.rm=TRUE)/sum(area)) %>%
   #mean of fronds / m
   group_by(year, month, site,transect,obs_code,sp_code,scientific_name,group) %>%
   summarise(mean_abund=mean(abund,na.rm=TRUE),max_abund=max(abund,na.rm=TRUE))
